ThirdParty/mojoshader/unit_tests/preprocessor/errors/redefinition-line.correct
preprocessor/errors/redefinition-line:2: ERROR: '__LINE__' already defined
